syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.myddd.extensions.security.api";
option java_outer_classname = "UserRoleApplicationProto";
package org.myddd.extensions.security.api;

service UserRoleApplication {

    /**
     * 创建一个角色
     */
    rpc CreateRole(RoleDto) returns (RoleDto);

}

message PageRoleDto{
    repeated RoleDto roles = 1;
    int32 page = 2;
    int32 page_size = 3;
    int64 total = 4;
}

message RoleDto{
    int64 id = 1;
    string role_id = 2;
    string name = 3;
    int64 created = 4;
}